--- a/package.json
+++ b/package.json
@@ -5,12 +5,10 @@
   "type": "module",
   "homepage": "https://zenin-dev.github.io/Personal-Portfolio-leHienPham/",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "gh-pages": "^6.1.1",
